<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diagnosis">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/black"
        android:clickable="true"
        android:contentDescription="@string/backbtn"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_results"
        android:fontFamily="@font/fira_sans"
        android:text="@string/title_results"
        android:textAlignment="center"
        android:textColor="@color/green_cafetech"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backhome"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/inpcamdisplay"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/upload_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@mipmap/ic_app_logo_alt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="73dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/diagnosis_prompt"
        android:fontFamily="@font/questrial"
        android:text="@string/diagnosis_prompt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpcamdisplay" />

    <TextView
        android:id="@+id/diagout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/diagnosis_output"
        android:fontFamily="@font/questrial"
        android:text="@string/diagnosis_output"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/basinfdesc"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxLines="12"
        android:scrollbars="vertical"
        android:text="@string/basinf_healthy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diagout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/proceedbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/green_cafetech"
        android:clickable="true"
        android:contentDescription="@string/proceeedbtn"
        app:tint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_camera_button_white_01" />

    <Button
        android:id="@+id/exitApp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_rectangle_1_a"
        android:clickable="true"
        android:paddingStart="33dp"
        android:paddingEnd="20dp"
        app:backgroundTint="@color/black"
        app:icon="@drawable/ic_baseline_power_settings_new_24"
        app:layout_constraintBottom_toBottomOf="@+id/proceedbutt"
        app:layout_constraintEnd_toStartOf="@+id/proceedbutt"
        app:layout_constraintTop_toTopOf="@+id/proceedbutt"
        app:srcCompat="@drawable/ic_baseline_power_settings_new_24"
        app:tint="@null" />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_rectangle_1_b"
        android:clickable="true"
        android:paddingStart="33dp"
        android:paddingEnd="20dp"
        app:backgroundTint="@color/black"
        app:icon="@drawable/ic_baseline_help_outline_24"
        app:layout_constraintBottom_toBottomOf="@+id/proceedbutt"
        app:layout_constraintStart_toEndOf="@+id/proceedbutt"
        app:layout_constraintTop_toTopOf="@+id/proceedbutt"
        app:srcCompat="@drawable/ic_baseline_power_settings_new_24"
        app:tint="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>