<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backBTN"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/app_logo_bgrad"
        android:clickable="true"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/guide_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="Reminders Title"
        android:fontFamily="@font/fira_sans"
        android:text="@string/guide_title"
        android:textAllCaps="false"
        android:textColor="@color/green_cafetech"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBTN" />

    <TextView
        android:id="@+id/guide_1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="Reminder 1"
        android:fontFamily="@font/questrial"
        android:text="@string/guide_1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_title" />

    <TextView
        android:id="@+id/guide_2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="Reminder 2"
        android:fontFamily="@font/questrial"
        android:text="@string/guide_2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cor_focus_prompt" />

    <TextView
        android:id="@+id/cor_focus_prompt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="Reminder 1 Preferred"
        android:fontFamily="@font/questrial"
        android:text="@string/prefer_prompt"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/cor_focus_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cor_focus_img"
        app:layout_constraintTop_toBottomOf="@+id/cor_focus_img" />

    <TextView
        android:id="@+id/cor_bg_prompt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="Reminder 2 Preferred"
        android:fontFamily="@font/questrial"
        android:text="@string/prefer_prompt"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/cor_bg_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cor_bg_img"
        app:layout_constraintTop_toBottomOf="@+id/cor_bg_img" />

    <TextView
        android:id="@+id/g1s2_TxtView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="Reminder 1 Avoid"
        android:fontFamily="@font/questrial"
        android:text="@string/avoid_prompt"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/wro_focus_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/wro_focus_img"
        app:layout_constraintTop_toBottomOf="@+id/wro_focus_img" />

    <TextView
        android:id="@+id/g2s2_TxtView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="Reminder 2 Avoid"
        android:fontFamily="@font/questrial"
        android:text="@string/avoid_prompt"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/wro_bg_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/wro_bg_img"
        app:layout_constraintTop_toBottomOf="@+id/wro_bg_img" />

    <ImageView
        android:id="@+id/cor_focus_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:contentDescription="Reminder 1 Preferred Image"
        app:layout_constraintEnd_toStartOf="@+id/wro_focus_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_1"
        app:srcCompat="@mipmap/ic_launcher_cor_focus" />

    <ImageView
        android:id="@+id/cor_bg_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:contentDescription="Reminder 2 Preferred Image"
        app:layout_constraintEnd_toStartOf="@+id/wro_bg_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_2"
        app:srcCompat="@mipmap/ic_launcher_cor_bg" />

    <ImageView
        android:id="@+id/wro_focus_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:contentDescription="Reminder 1 Avoid Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cor_focus_img"
        app:layout_constraintTop_toBottomOf="@+id/guide_1"
        app:srcCompat="@mipmap/ic_launcher_wro_focus" />

    <ImageView
        android:id="@+id/wro_bg_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:contentDescription="Reminder 2 Avoid Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cor_bg_img"
        app:layout_constraintTop_toBottomOf="@+id/guide_2"
        app:srcCompat="@mipmap/ic_launcher_wro_bg" />

    <Button
        android:id="@+id/bttn_cam"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="Camera button"
        android:fontFamily="@font/questrial"
        android:text="@string/open_cam"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bttn_upload"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="Upload button"
        android:fontFamily="@font/questrial"
        android:text="@string/upload_img"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bttn_cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bttn_cam"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>